feat!: use json, uuids, integrations and missed notifications
- major refactor for storing data
- floodgate integration to support bedrock accounts joining with geyser
- justsync integration to not give notifications for registered alts

BREAKING CHANGE: old data is incompatible due to usage of usernames instead of uuids

--- a/build.gradle
+++ b/build.gradle
@@ -10,7 +10,24 @@ base {
 	archivesName = project.archives_base_name
 }
 
+configurations {
+    embed
+    compileOnly.extendsFrom(embed)
+}
+
+shadowJar {
+    configurations = [project.configurations.embed]
+    exclude('META-INF/services/**')
+    relocate "com.moandjiezana", "dcshadow.com.moandjiezana"
+}
+
 repositories {
+    mavenCentral()
+    maven {
+        url = uri("https://repo.opencollab.dev/main/")
+    }
+    maven { url 'https://jitpack.io' }
+
 	// Add repositories to retrieve artifacts from in here.
 	// You should only use this when depending on other mods because
 	// Loom adds the essential maven repositories to download Minecraft and libraries from automatically.
@@ -23,7 +40,7 @@ loom {
 	splitEnvironmentSourceSets()
 
 	mods {
-		"modid" {
+		"altx" {
 			sourceSet sourceSets.main
 			sourceSet sourceSets.client
 		}
@@ -46,13 +63,25 @@ dependencies {
 	mappings "net.fabricmc:yarn:${project.yarn_mappings}:v2"
 	modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
 
-	// Fabric API. This is technically optional, but you probably want it anyway.
 	modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
 
 	include(modImplementation("me.lucko:fabric-permissions-api:${project.fabric_permission_api_version}"))
 
 	embed implementation("club.minnced:discord-webhooks:${project.minnced_discord_webhook_version}")
+	implementation("club.minnced:discord-webhooks:${project.minnced_discord_webhook_version}")
+
+    // config
+    embed implementation("de.erdbeerbaerlp:toml4j:dd60f51")
+
+    // floodgate integration
+    compileOnly('org.geysermc.floodgate:api:2.2.4-SNAPSHOT')
+
+    // justsync integration
+    compileOnly('com.github.OrdinarySMP:DiscordJustSync:master-SNAPSHOT')
+
 }
+
+tasks.build.dependsOn(tasks.shadowJar)
 
 processResources {
 	inputs.property "version", project.version
@@ -76,6 +105,15 @@ java {
 	targetCompatibility = JavaVersion.VERSION_21
 }
 
+remapJar {
+    // wait until the shadowJar is done
+    dependsOn(shadowJar)
+    mustRunAfter(shadowJar)
+    // Set the input jar for the task. Here use the shadow Jar that include the .class of the transitive dependency
+    inputFile = file(shadowJar.archiveFile)
+}
+
+
 jar {
 	from("LICENSE") {
 		rename { "${it}_${project.base.archivesName.get()}"}
@@ -89,6 +127,11 @@ remapJar {
 	// Set the input jar for the task. Here use the shadow Jar that include the .class of the transitive dependency
 	inputFile = file(shadowJar.archiveFile)
 }
+
+artifacts {
+    archives tasks.shadowJar
+}
+
 
 // configure the maven publication
 publishing {
