--- a/build.gradle
+++ b/build.gradle
@@ -37,8 +37,8 @@ dependencies {
 
 	// Fabric API. This is technically optional, but you probably want it anyway.
 	modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
-	
-    include(modImplementation('me.lucko:fabric-permissions-api:0.3.3'))
+
+	include(modImplementation("me.lucko:fabric-permissions-api:${project.fabric_permission_api_version}"))
 }
 
 processResources {
