--- a/gradle.properties
+++ b/gradle.properties
@@ -15,3 +15,5 @@ archives_base_name=AltX-fabric
 # Dependencies
 fabric_version=0.127.0+1.21.6
 fabric_permission_api_version=0.4.0
+
+minnced_discord_webhook_version=0.8.4
