--- a/gradle.properties
+++ b/gradle.properties
@@ -14,3 +14,6 @@ archives_base_name=AltX-fabric
 
 # Dependencies
 fabric_version=0.104.0+1.21.1
+fabric_permission_api_version=0.3.1
+
+minnced_discord_webhook_version=0.8.4
