--- a/build.gradle
+++ b/build.gradle
@@ -15,6 +15,7 @@ repositories {
 	// Loom adds the essential maven repositories to download Minecraft and libraries from automatically.
 	// See https://docs.gradle.org/current/userguide/declaring_repositories.html
 	// for more information about repositories.
+	mavenCentral()
 }
 
 loom {
@@ -39,6 +40,8 @@ dependencies {
 	modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
 
 	include(modImplementation("me.lucko:fabric-permissions-api:${project.fabric_permission_api_version}"))
+
+	implementation("club.minnced:discord-webhooks:${project.minnced_discord_webhook_version}")
 }
 
 processResources {
