--- a/gradle.properties
+++ b/gradle.properties
@@ -14,3 +14,6 @@ archives_base_name=AltX-fabric
 
 # Dependencies
 fabric_version=0.119.5+1.21.5
+fabric_permission_api_version=0.3.3
+
+minnced_discord_webhook_version=0.8.4
