--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -46,6 +46,8 @@ jobs:
           distribution: 'microsoft'
       - name: make gradle wrapper executable
         run: chmod +x ./gradlew
+      - name: gradle setup
+        uses: gradle/actions/setup-gradle@v4
       - name: build
         run: ./gradlew build -Pversion=pr-${{ github.event.number }}
       - name: capture build artifacts
