--- a/gradle.properties
+++ b/gradle.properties
@@ -4,16 +4,20 @@ org.gradle.parallel=true
 
 # Fabric Properties
 # check these on https://fabricmc.net/develop
-minecraft_version=1.21.8
-yarn_mappings=1.21.8+build.1
+minecraft_version=1.21.6
+last_minecraft_version=
+yarn_mappings=1.21.6+build.1
 loader_version=0.16.14
 
 # Mod Properties
 maven_group=com.xadale
 archives_base_name=AltX-fabric
 
-# Dependencies
-fabric_version=0.129.0+1.21.8
+# Mod Dependencies
+fabric_version=0.127.0+1.21.6
 fabric_permission_api_version=0.4.0
+floodgate_api_version=2.2.4-SNAPSHOT
+justsync_version=master-SNAPSHOT
 
+# Dependencies
 minnced_discord_webhook_version=0.8.4
