--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 plugins {
-	id 'fabric-loom' version '1.11-SNAPSHOT'
+	id 'fabric-loom' version '1.14-SNAPSHOT'
 	id 'maven-publish'
-	id 'com.github.johnrengelman.shadow' version "8+"
+	id 'com.gradleup.shadow' version "9+"
 }
 
 group = project.maven_group
